[gd_scene load_steps=2 format=3 uid="uid://bwnu8ilflfart"]

[ext_resource type="Script" path="res://addons/treehave/editor_dock.gd" id="1_muj4c"]

[node name="EditorDock" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_muj4c")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SelectionPanel" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="PanelVBox" type="VBoxContainer" parent="HBoxContainer/SelectionPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelTitle" type="Label" parent="HBoxContainer/SelectionPanel/PanelVBox"]
layout_mode = 2
text = "SelectionPanel"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AddSceneButton" type="Button" parent="HBoxContainer/SelectionPanel/PanelVBox"]
layout_mode = 2
text = "Add Scene"

[node name="FileDialog" type="FileDialog" parent="HBoxContainer/SelectionPanel/PanelVBox/AddSceneButton"]
unique_name_in_owner = true
title = "Open a File"
initial_position = 2
size = Vector2i(392, 162)
ok_button_text = "Open"
file_mode = 0
root_subfolder = "addons/treehave/preset_nodes"
filters = PackedStringArray("*.tscn")

[node name="GraphEdit" type="GraphEdit" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
size_flags_horizontal = 3

[node name="GraphNode2" type="GraphNode" parent="HBoxContainer/GraphEdit"]
layout_mode = 0
offset_left = 671.0
offset_top = 193.0
offset_right = 832.0
offset_bottom = 273.0
mouse_filter = 1
title = "Child Node"
position_offset = Vector2(671, 193)
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color(1, 0.498039, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Label" type="Label" parent="HBoxContainer/GraphEdit/GraphNode2"]
layout_mode = 2
text = "LABEL"

[node name="GraphNode3" type="GraphNode" parent="HBoxContainer/GraphEdit"]
layout_mode = 0
offset_left = 585.0
offset_top = 392.0
offset_right = 746.0
offset_bottom = 472.0
mouse_filter = 1
title = "Child Node"
position_offset = Vector2(585, 392)
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color(1, 0.498039, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 1
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true

[node name="Label" type="Label" parent="HBoxContainer/GraphEdit/GraphNode3"]
layout_mode = 2
text = "LABEL"

[connection signal="gui_input" from="HBoxContainer/SelectionPanel" to="." method="_on_selection_panel_gui_input"]
[connection signal="pressed" from="HBoxContainer/SelectionPanel/PanelVBox/AddSceneButton" to="." method="_on_add_scene_button_pressed"]
[connection signal="file_selected" from="HBoxContainer/SelectionPanel/PanelVBox/AddSceneButton/FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="connection_request" from="HBoxContainer/GraphEdit" to="." method="_on_graph_edit_connection_request"]
[connection signal="delete_nodes_request" from="HBoxContainer/GraphEdit" to="." method="_on_graph_edit_delete_nodes_request"]
[connection signal="disconnection_request" from="HBoxContainer/GraphEdit" to="." method="_on_graph_edit_disconnection_request"]
[connection signal="gui_input" from="HBoxContainer/GraphEdit" to="." method="_on_graph_edit_gui_input"]
